force-app/main/default/objects/Vinculo_de_venda_consumivel__c/Vinculo_de_venda_consumivel__c.object-meta.xml
<CustomObject>
    <label>Vínculo de venda consumível</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vínculos de venda consumível</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>