force-app/main/default/objects/Vinculo_de_venda_consumivel__c/fields/Ativo_do_comodato__c.field-meta.xml
<CustomField>
    <fullName>Ativo_do_comodato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ativo do comodato</label>
    <referenceTo>Produto_da_demonstracao__c</referenceTo>
    <relationshipLabel>Vínculos de venda consumível</relationshipLabel>
    <relationshipName>V_nculos_de_venda_consum_vel</relationshipName>
    <type>Lookup</type>
</CustomField>