force-app/main/default/objects/Vinculo_de_venda_consumivel__c/fields/Insumo__c.field-meta.xml
<CustomField>
    <fullName>Insumo__c</fullName>
    <formula>Produto_do_pedido__r.Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insumo</label>
    <type>Text</type>
</CustomField>