force-app/main/default/objects/Vinculo_de_venda_consumivel__c/fields/N_mero_do_comodato__c.field-meta.xml
<CustomField>
    <fullName>N_mero_do_comodato__c</fullName>
    <formula>Ativo_do_comodato__r.Demonstracao__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número do comodato</label>
    <type>Text</type>
</CustomField>