force-app/main/default/objects/Vinculo_de_venda_consumivel__c/fields/NS_do_Ativo__c.field-meta.xml
<CustomField>
    <fullName>NS_do_Ativo__c</fullName>
    <formula>Ativo_do_comodato__r.Ativo__r.SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS do Ativo</label>
    <type>Text</type>
</CustomField>