force-app/main/default/objects/Vinculo_de_venda_consumivel__c/fields/Produto_do_pedido__c.field-meta.xml
<CustomField>
    <fullName>Produto_do_pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto do pedido</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Vínculos de venda consumível</relationshipLabel>
    <relationshipName>V_nculos_de_venda_consum_vel</relationshipName>
    <type>Lookup</type>
</CustomField>